use a simpler dockerfile